WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28276
Geolocation error callback is invoked synchronously if service fails to start
https://bugs.webkit.org/show_bug.cgi?id=28276
Summary
Geolocation error callback is invoked synchronously if service fails to start
Steve Block
Reported
2009-08-13 13:20:29 PDT
Currently, when a Geolocation method is called, the error callback is invoked synchronously if the Geolocation service fails to start. This behavior is incorrect. All callbacks should be asynchronous. See the W3C spec -
http://www.w3.org/TR/geolocation-API/#geolocation_interface
.
Attachments
Patch 1 for Bug 28276
(2.85 KB, patch)
2009-10-28 08:38 PDT
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2009-09-09 10:29:07 PDT
The fix for this bug requires the 'setFatalError' framework in the fix for
Bug 27944
.
Steve Block
Comment 2
2009-10-28 08:38:00 PDT
Created
attachment 42029
[details]
Patch 1 for
Bug 28276
Adding a test for this bug would require new methods to be added to the mock Geolocation service and LayoutTestController. For such a simple fix, I don't think it's worthwhile.
WebKit Commit Bot
Comment 3
2009-11-05 18:46:13 PST
Comment on
attachment 42029
[details]
Patch 1 for
Bug 28276
Clearing flags on attachment: 42029 Committed
r50585
: <
http://trac.webkit.org/changeset/50585
>
WebKit Commit Bot
Comment 4
2009-11-05 18:46:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug